Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36410

Application crashes when using Instantiator with asynchronous Loader

XMLWordPrintable

    • qtdeclarative:8018c4b6e7743c576a3548f6e73e588f19f632a9

      I am using an asynchronous Loader to load Qml components on demand.
      When using ComboBox (QtQuick.Controls) in the loaded component, it fails to use its model. A minimal example is attached below.

      With 5.1.1 (Windows 7, VS 2012 32bit) the combobox popup is empty and very small (about 1×1 px). The application keeps running.

      I was able to reproduce the issue with Qt 5.2.0 in Debian Linux using Virtual Box.
      If 3D acceleration is disabled (Virtual Box setting, mesa takes over i guess) the example works just fine. If 3D acceleration is enabled, the application crashes.

      Please tell me if you need more information to reproduce this bug.

      update
      I simplified the example and removed the need for Controls. It can be reproduced with a basic Instantiator like this:

      import QtQuick 2.2
      
      Loader {
          asynchronous: true
          sourceComponent: Instantiator { model: 3 ; Item{}}
      }
      

        For Gerrit Dashboard: QTBUG-36410
        # Subject Branch Project Status CR V

            dedietri Gabriel de Dietrich (drgvond)
            ebe4841 ebe
            Votes:
            11 Vote for this issue
            Watchers:
            18 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes